--- a/ru/main.html
+++ b/ru/main.html
@@ -77,7 +77,7 @@
     <section id="main">
       <div class="container-fluid main-block">
         <div class="row">
-          <div class="col-7">
+          <div class="col-lg-7 col-md-4 col-sm-12">
             <img src="../img/object_mobile_top.png" class="main-img-mobile" alt="">
 
             <svg width="683" height="536" viewBox="0 0 683 536" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -91,7 +91,7 @@
               </svg>
               
           </div>
-          <div class="col-lg-5 col-md-5 col-sm-12 text-block">
+          <div class="col-lg-5 col-md-8 col-sm-12 text-block">
             <h1>Расширение возможностей майнинга</h1>
             <button class="yellow-button" onclick="location.href='#contact-us';">Присоединиться</button>
           </div>
@@ -103,10 +103,10 @@
         <h2>О нас</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p >Altyn Pool создан сообществом майнеров с четким пониманием важности децентрализованности сети. Пул обеспечивает стабильную работу в Казахстане и по всему миру.</p>
+          <p >Altyn Pool создан сообществом майнеров для майнеров. У нас есть четкое понимание важности децентрализованности сети, а также осознание того, что Казахстан становится ключевым регионом в майнинге, а локальный пул должен вывести индустрию на новый уровень.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
-          <p class="first-text">Команда Altyn использует профессионализм и обширный опыт для того, чтобы предоставить майнерам непрерывный и бесперебойный майнинг по всему миру.</p>
+          <p class="first-text">Команда Altyn Pool обладает уникальной экспертизой и обширным опытом для того, чтобы предоставить майнерам непрерывный и бесперебойный майнинг, а также удобную точку входа для сотрудничества с Казахстаном.</p>
           <button onclick="location.href='#contact-us';">Присоединиться</button>
         </div>
         </div>
@@ -119,27 +119,19 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                    консалтинг
-                </p>
+                <p>консалтинг</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">
-                Консультационные услуги для майнеров, майнинг пулов и инвесторов. Мы поможем найти решение независимо от размера вашего бизнеса.             
-              </p>
+              <p class="card-content">Оказываем услуги консалта для майнеров, дата центров и инвесторов. Мы поможем найти оптимальное решение на любой ваш запрос, благодаря большой сети контактов мы всегда сможем подобрать необходимые компетенции.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                    прошивки
-                </p>
+                <p>майнинг пул</p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">
-                Прошивки для майнинг устройств для безопасного увеличения прибыли от майнинга.
-              </p>
+              <p class="card-content">Квалифицированная команда использует лучшие мировые решения для обеспечения стабильной работы и высокого лайк-рейта. Сервера в Казахстане и круглосуточная поддержка повысят не только  профит, но и удобство от использования.</p>
             </div>
           </div>
         </div>
@@ -147,15 +139,10 @@
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
-                <p>
-                    майнинг пул
-                </p>
+                <p>прошивки</p>
                <div class="middle-line "></div>
               </div>
-
-              <p class="card-content">
-                Децентрализованный майнинг-пул, расположенный в Казахстане и работающий по всему миру.
-            </p>
+              <p class="card-content">Мы разрабатываем уникальные конфигурации прошивок для наиболее популярных Асиков с целью повышения эффективности добычи и снижения расходов на электричество и обслуживание. Наша команда может создать прошивку, которая будет отвечать именно вашему запросу.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -166,9 +153,7 @@
                 </p>
                <div class="middle-line "></div>
               </div>
-              <p class="card-content">
-                Размещение майнинг оборудования в Казахстане и по всему миру.
-            </p>
+              <p class="card-content">Большая сеть контактов позволяют нам предложить вам специальные условия для размещения оборудования как в Казахстане, так и по всему миру. Кроме этого мы всегда открыты для сотрудничества с дата центрами для привлечения майнеров с целью релокации.</p>
             </div>
           </div>
         </div>
@@ -249,48 +234,53 @@
             Желаете майнить с нами ?
           </h2>
           <div class="col-lg-6 col-md-6 col-sm-12 input-holder">
-            
-            <div class="input-inner">
-              <label id="contact-label" for="">Email *</label>
-              <input type="email" required>
+            <form action="">
+              <!-- Hidden Required Fields -->
+              <input type="hidden" name="project_name" value="Miningsoftware.solutions">
+              <input type="hidden" name="admin_email" value="info@interhash.by">
+              <input type="hidden" name="form_subject" value="Request for private firmware">
+              <!-- END Hidden Required Fields -->
+          <div class="input-inner form-floating">
+            <input type="email" class="form-control" id="floatingInputEmail" name="email" placeholder="Email *" required>
+            <label for="floatingInputEmail">Email *</label>
+          </div>
+          <div class="input-inner form-floating">
+            <input type="name" class="form-control" id="floatingInputName" name="name" placeholder="Full name *" required>
+            <label for="floatingInputEmail">Имя *</label>
+          </div>
+          <div class="input-inner form-floating">
+            <input type="name" class="form-control" id="floatingInputCompanyName" name="name" placeholder="Company name" required>
+            <label for="floatingInputEmail">Название компании</label>
+          </div>
+          <div class="row input-double-inner">
+            <div class="col-lg-6 col-md-6 col-sm-12 select-block">
+              <select name="location" id="">
+                <option selected>LOCATION</option>
+                <option value="Asia">Азия</option>
+                <option value="Europe">Европа</option>
+                <option value="Africa">Африка</option>
+                <option value="North America">Северная Америка</option>
+                <option value="South America">Южная Америка</option>
+                <option value="Australia and Oceania">Австралия и Океания</option>
+              </select>
             </div>
-            <div class="input-inner">
-              <label for="">Имя *</label>
-              <input type="name" required>
+            <div class="col-lg-6 col-md-6 col-sm-12 select-block">
+              <select name="interest" id="">
+                <option selected>ИНТЕРЕС</option>
+                <option value="Cryptocurrency mining">Майнинг криптовалюты</option>
+                <option value="Crypto exchange">Криптовалютная биржа</option>
+                <option value="Equipment placement">Размещение оборудования</option>
+                <option value="Firmware manufacturing">Разработчики ПО</option>
+                <option value="Мining investments">Инвстиции в майнинг</option>
+                <option value="Мining pool">Майнинг пул</option>
+              </select>
             </div>
-            <div class="input-inner">
-              <label for="">Название компании</label>
-              <input type="text" required>
-            </div>
-            <div class="row input-double-inner">
-              <div class="col-lg-6 col-md-6 col-sm-12 select-block">
-                <select name="location" id="">
-                  <option selected>ЛОКАЦИЯ</option>
-                  <option value="Азия">Азия</option>
-                  <option value="Европа">Европа</option>
-                  <option value="Африка">Африка</option>
-                  <option value="Северная Америка">Северная Америка</option>
-                  <option value="Южная Америка">Южная Америка</option>
-                  <option value="Австралия и Океания">Австралия и Океания</option>
-                </select>
-              </div>
-              <div class="col-lg-6 col-md-6 col-sm-12 select-block">
-                <select name="interest" id="">
-                  <option selected>ИНТЕРЕС</option>
-                  <option value="Инвестиции в майнинг">Инвестиции в майнинг</option>
-                  <option value="Криптовалютная биржа">Криптовалютная биржа</option>
-                  <option value="Майнинг криптовалют">Майнинг криптовалют</option>
-                  <option value="Майнинг пул">Майнинг пул</option>
-                  <option value="Размещение оборудования">Размещение оборудования</option>
-                  <option value="Разработка ПО">Разработка ПО</option>
-                </select>
-              </div>
-            </div>
-            <div class="input-inner-message">
-              <label for="">Сообщение</label>
-              <input type="text">
-            </div>
-            <button class="yellow-button">Отправить</button>
+          </div>
+          <div class="input-inner-message">
+            <textarea type="text" style="overflow: hidden !important;" name="text" id="floatingTextareaMsg"  placeholder="Message" onkeyup="textAreaAdjust(this)" ></textarea>
+          </div>
+          <button type="submit" value="submit" class="yellow-button">Отправить</button>
+        </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <img src="../img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
