--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="navbar-nav">
               <a class="nav-link" href="#about-us">About Us</a>
               <a class="nav-link" href="#our-services">Our services</a>
-              <a class="nav-link" href="#why-us">Why Us</a>
-              <a class="nav-link" href="#main">Pool</a>
+              <!-- <a class="nav-link" href="#why-us">Why Us</a> -->
+              <a class="nav-link" href="#why-us">Pool</a>
               <a class="nav-link" href="#contact-us">Contacts</a>
               <div class="dropdown">
                 <button onclick="dropdownOnClick()" id="lang-btn" class="language-btn">English <img id="lang-carret" src="img/caret-down.svg" width="11px" style="padding-bottom: 4px; margin-left: 4px;" alt=""></button>
@@ -78,8 +78,8 @@
         </div>
         <a onclick="closeNav()" class="mobile-nav-link" href="#about-us">About Us</a>
         <a onclick="closeNav()" class="mobile-nav-link" href="#our-services">Our services</a>
-        <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Why Us</a>
-        <a onclick="closeNav()" class="mobile-nav-link" href="#main">Pool</a>
+        <!-- <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Why Us</a> -->
+        <a onclick="closeNav()" class="mobile-nav-link" href="#why-us">Pool</a>
         <a onclick="closeNav()" class="mobile-nav-link" href="#contact-us">Contacts</a>
       </div>
       <div class="mobile-header-footer"></div>
@@ -105,10 +105,10 @@
         <h2>about us</h2>
         <div class="row text-block">
         <div class="col-lg-6 col-md-6 col-sm-12 first-text-block">
-          <p >Altyn Pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
+          <p >Altyn pool was created by the Kazakhstan mining community. We have a precise understanding of network decentralization importance, as well as realization that Kazakhstan is becoming a key mining region and local pool should bring the industry to a new level.</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 second-text-block">
-          <p class="first-text">Altyn Pool team uses unique expertise and vast experience in order to provide miners with uninterrupted and trouble-free mining, as well as a convenient entry point for cooperation with Kazakhstan.</p>
+          <p class="first-text">Altyn pool team uses unique expertise and vast experience in order to provide miners with uninterrupted and trouble-free mining, as well as a convenient entry point for cooperation with Kazakhstan.</p>
           <button onclick="location.href='#contact-us';">Join</button>
         </div>
         </div>
@@ -170,7 +170,7 @@
     </section>
     <section id="why-us">
       <div class="container-fluid why-us">
-        <h2>why choose <b>altyn</b>?</h2>
+        <h2>why choose <b>altyn pool</b>?</h2>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
@@ -182,20 +182,20 @@
               </div>
 
               <p class="card-content">
-                We offer mining of Bitcoin, Ehterium and Litecoin.
-              </p>
+                Altyn pool allows mining of three main leading currencies: BTC, LTC and ETH.
+                We are constantly analyzing the mining market to further increase the number of available coins.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
                 <p>
-                  auto-payouts
+                  Merged mining
                 </p>
                <div class="middle-line "></div>
               </div>
               <p class="card-content">
-                You can transwer mined crypto manually to set up auto-payout to your trusted wallet.
+                Merged mining allows two or more cryptocurrencies to be mined at the same time without compromising overall mining. LTC + DOGE merged mining is available at the moment.
               </p>
             </div>
           </div>
@@ -209,27 +209,11 @@
                 </p>
                <div class="middle-line "></div>
               </div>
-
               <p class="card-content">
-                Payouts are avalible on FPPS and PPLNS terms.
+                Our pool supports the most reliable payment methods: FPPS and PPLNS and also provides the option of automatic payments once a day with an adjustable withdrawal threshold.
               </p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
-            <div class="text-card">
-              <div class="card-head">
-                <p>
-                  Vip Services
-                </p>
-               <div class="middle-line "></div>
-              </div>
-              <p class="card-content">
-                Premium services and VIP servers.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="text-card">
               <div class="card-head">
@@ -238,10 +222,21 @@
                 </p>
                <div class="middle-line "></div>
               </div>
-
               <p class="card-content">
-                0% for Kazakh miners.
-              </p>
+                As a support for our clients from Kazakhstan, we set zero mining fees. Our pool does not charge any fees from Kazakh miners.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="text-card">
+              <div class="card-head">
+                <p>
+                  Vip service
+                </p>
+               <div class="middle-line "></div>
+              </div>
+              <p class="card-content">Our value is our customers. We provide a whole range of services and privileges for large miners. For ease of use, a personal manager will be with you 24/7.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
@@ -253,7 +248,7 @@
                <div class="middle-line "></div>
               </div>
               <p class="card-content">
-                Integration with P2P platform.
+                Integrated P2P platform allows automatic exchange of altcoins in BTC and USDT. Our P2P is an absolutely legal service with round-the-clock support, we use reliable wallets of the reputable BitGo
               </p>
             </div>
           </div>
@@ -267,13 +262,8 @@
             <h2>
               want to mine with us?
             </h2>
-            <p>Altyn Pool is a secure product. We care about the privacy of miners, contact us if you want to connect to our service or get advice.</p>
+            <p>Altyn pool is a secure product. We care about the confidentiality of our clients, contact us if you want to connect to our service or get advice.</p>
             <form action="">
-              	<!-- Hidden Required Fields -->
-                <input type="hidden" name="project_name" value="Miningsoftware.solutions">
-                <input type="hidden" name="admin_email" value="info@interhash.by">
-                <input type="hidden" name="form_subject" value="Request for private firmware">
-                <!-- END Hidden Required Fields -->
             <div class="input-inner form-floating">
               <input type="email" class="form-control" id="floatingInputEmail" name="email" placeholder="Email *" required>
               <label for="floatingInputEmail">Email *</label>
@@ -317,8 +307,8 @@
           </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3050; position: absolute;" alt="">
-            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 2950; position: absolute;"  alt="">
+            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:5; right: 100; top: 3350; position: absolute;" alt="">
+            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 4; right:0; top: 3250; position: absolute;"  alt="">
           </div>
         </div>
       </div>
@@ -368,46 +358,6 @@
         <div id="bio_ep">
             <div id="bio_ep_close">X</div>
         </div> -->
-
-        <script>
-          /*indent: 4*/
-/*global $, console, alert*/
-var currentTab = (function () {
-    "use strict";
-    //variables
-    var $window = $(window),
-        $section = $('section'),
-        $scrollPosition = $window.scrollTop(),
-        $sectionHeights = [];
-    //will calculate each section heights and store them in sectionHeights[] array
-    function resizeSectionHeights() {
-        $section.each(function (i) {
-            $sectionHeights[i] = $(this).outerHeight();
-        });
-    }
-    /*will calculate current scroll position. If it's between the top and bottom of a section, 
-      the tab containing an href value of that section id will have the .current class.*/
-    function applyCurrentState() {
-        $scrollPosition = $window.scrollTop();
-        $section.each(function (i) {    //we indent i at each section count, so we can find it's height in sectionHeight[]
-            var $anchor = $("nav a[href=#" + $(this).attr('id') + "]"),
-                $sectionTop = $(this).offset().top - 1,                    // -1 get rid of calculation errors
-                $sectionBottom = $sectionTop + $sectionHeights[i] - 1;    // -1 get rid of calculation errors
-            if ($scrollPosition >= $sectionTop && $scrollPosition < $sectionBottom) {
-                $anchor.addClass('current');
-            } else {
-                $anchor.removeClass('current');
-            }
-        });
-    }
-    //binding events
-    $window.resize(resizeSectionHeights);
-    $window.scroll(applyCurrentState);
-    //initialization
-    resizeSectionHeights();
-}());
-
-        </script>
 <script>
   function dropdownOnClick() {
     document.getElementById("myDropdown").classList.toggle("show");
