--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
           </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <img src="img/circle.svg" class="img_circle" width="200px" style="z-index:3; right: 100; top: 3450; position: absolute;" alt="">
-            <img src="img/object_contact.png" class="img_full" width="610px" style="z-index: 2; right:0; top: 3350; position: absolute;"  alt="">
+            <img src="img/circle.svg" class="img_circle" width="150px" style="z-index:3; right: 100; top: 3350; position: absolute;" alt="">
+            <img src="img/object_contact.png" class="img_full" width="510px" style="z-index: 2; right:0; top: 3250; position: absolute;"  alt="">
           </div>
         </div>
       </div>
@@ -320,8 +320,9 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-12">
-            <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt="">
-            <p>Altyn pool official </p>
+            <!-- <img src="img/circle.svg" class="footer_circle_img" width="4%" style="padding-bottom: 14px;" alt=""> -->
+            <a class="navbar-brand" href="#"><img src="img/circle.svg" width="27px" alt=""> altyn pool</a>
+            <p class="footer-description">Altyn pool official </p>
           </div>
           <div class="col-lg-8 col-md-8 col-sm-12 footer-menu">
             <div class="row" >
